[gd_scene load_steps=4 format=2]

[ext_resource path="res://Network_setup.gd" type="Script" id=1]
[ext_resource path="res://Base_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Base_font_small.tres" type="DynamicFont" id=3]

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Create_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -230.5
margin_top = 398.0
margin_right = 230.5
margin_bottom = 488.0
custom_fonts/font = ExtResource( 2 )
text = "Create server"

[node name="Join_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1.0
margin_top = 149.0
margin_right = 411.0
margin_bottom = 271.0
custom_fonts/font = ExtResource( 2 )
text = "Join server"

[node name="Server_ip_address" type="LineEdit" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -244.0
margin_top = 201.0
margin_right = -59.0
margin_bottom = 232.0
custom_fonts/font = ExtResource( 3 )
text = "Enter IP address"
align = 1

[node name="Device_ip_address" type="Label" parent="Multiplayer_configure"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_top = -420.0
margin_right = -1311.0
margin_bottom = -399.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1

[node name="N_players_items" type="ItemList" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.0
margin_top = 150.0
margin_right = 44.0
margin_bottom = 209.0
custom_fonts/font = ExtResource( 3 )
items = [ "1 player", null, false, "2 players", null, false ]
max_text_lines = 2
auto_height = true
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Multiplayer_configure/Create_server" to="." method="_on_Create_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/Join_server" to="." method="_on_Join_server_pressed"]
